fix comment on last line of affiliations

--- a/_extensions/iccr/partials/_affiliations.tex
+++ b/_extensions/iccr/partials/_affiliations.tex
@@ -4,4 +4,4 @@ $if(it.city)$, $it.city$$endif$%
 $if(it.state)$, $it.state$$endif$%
 $if(it.postal-code)$, $it.postal-code$$endif$%
 $if(it.country)$, $it.country$$endif$%
-$if(it.country)$, $it.country$$endif$%
+$if(it.country)$, $it.country$$endif$
