use simpler template, fix two-column tables

--- a/_extensions/iccr/partials/title.tex
+++ b/_extensions/iccr/partials/title.tex
@@ -3,11 +3,9 @@ $if(title)$
 $endif$
 
 $for(by-author)$
-\author[%
-$if(by-author.affiliations)$%
+\author[$if(by-author.affiliations)$%
 $for(by-author.affiliations)$$it.id$$sep$,$endfor$%
-$endif$%
-]{$by-author.name.literal$}
+$endif$]{$by-author.name.literal$}
 $endfor$
 
 $for(by-affiliation)$
